--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "app":"node --watch app.js "
+    "app1":"node --watch app.js "
   },
   "keywords": [],
   "author": "",
