--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "description": "lesson4",
   "dependencies": {
-  "express": "^5.1.0"  }
+    "@types/morgan": "^1.9.10",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "joi": "^18.0.1"
+  }
 }
