--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "description": "lesson4",
   "dependencies": {
+    "@types/express-fileupload": "^1.5.1",
     "@types/morgan": "^1.9.10",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "joi": "^18.0.1"
+    "joi": "^18.0.1",
+    "morgan": "^1.10.1"
   }
 }
