--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/morgan": "^1.9.10",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.1",
     "mongoose": "^9.0.0",
